# raytracing-engine

./: .gitignore  CMakeLists.txt  README.MD  bvh.cpp  bvh.h  camera.cpp  camera.h  compute_renderer.cpp  compute_renderer.h  gl.c  main.cpp  renderer.cpp  renderer.h  scene_data.cpp  scene_data.h  shader_class.cpp  shader_class.h  vao.cpp  vao.h  vbo.cpp  vbo.h
shaders/: default.frag  default.vert  display.frag  display.vert  raytracer.comp
